--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "google-auth-library": "^9.7.0",
+    "graphql": "^16.8.1",
+    "graphql-http": "^1.22.1",
     "joi": "^17.12.1",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
